--- a/index.html
+++ b/index.html
@@ -908,8 +908,8 @@ function selectBodyMenu(button) {
     button.style.backgroundColor = '#444';  // 選択時の色
     button.style.color = 'white';  // テキストを白に変更
 
-    // 改行や空白を削除した症状名を取得
-    const symptomName = button.innerText.replace(/\s+/g, '');  // ボタンのテキストを取得し、空白や改行を削除
+    // 選択されたメニューの名前と価格を取得し、<br>をスペースに置換する
+    const symptomName = button.innerHTML.replace(/<br\s*\/?>/gi, ' ');  // <br>タグをスペースに変換
     selectedSymptom = [symptomName];  // 選択されたメニュー名を配列として保存
     menuPrice = parseInt(button.getAttribute('data-price'), 10);  // メニューの価格を取得
 
