--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
             </div>
             <div class="symptoms" id="irradiations22">
                 <button type="button" id="irradiations1-0" onclick="selectirradiations(this)"
-                    data-price="15000">とりあえず予約:フェイシャルメニュー</button>
+                    data-price="15000">とりあえず予約フェイシャルメニュー</button>
                 <button type="button" id="irradiations1-1" onclick="selectirradiations(this)"
                     data-price="15000">小顔矯正リフトアップコース</button>
                 <button type="button" id="irradiations1-2" onclick="selectirradiations(this)"
@@ -424,7 +424,7 @@
             </div>
             <div class="symptoms" id="irradiations33">
                 <button type="button" id="irradiations2-0" onclick="selectirradiations(this)"
-                    data-price="15000">とりあえず予約:フェイシャルメニュー</button>
+                    data-price="15000">とりあえず予約フェイシャルメニュー</button>
                 <button type="button" id="irradiations2-1" onclick="selectirradiations(this)"
                     data-price="15000">強炭酸・ガリレオピーリング</button>
                 <button type="button" id="irradiations2-2" onclick="selectirradiations(this)"
@@ -461,7 +461,7 @@
             </div>
             <div class="symptoms" id="irradiations44">
                 <button type="button" id="irradiations3-0" onclick="selectirradiations(this)"
-                    data-price="15000">とりあえず予約:フェイシャルメニュー</button>
+                    data-price="15000">とりあえず予約フェイシャルメニュー</button>
                 <button type="button" id="irradiations3-1" onclick="selectirradiations(this)"
                     data-price="15000">毛穴洗浄コース</button>
                 <button type="button" id="irradiations3-2" onclick="selectirradiations(this)"
@@ -478,7 +478,7 @@
             </div>
             <div class="symptoms" id="irradiations55">
                 <button type="button" id="irradiations4-0" onclick="selectirradiations(this)"
-                    data-price="15000">とりあえず予約:フェイシャルメニュー</button>
+                    data-price="15000">とりあえず予約フェイシャルメニュー</button>
                 <button type="button" id="irradiations4-1" onclick="selectirradiations(this)"
                     data-price="15000">シミ部分コース</button>
                 <button type="button" id="irradiations4-2" onclick="selectirradiations(this)"
@@ -509,7 +509,7 @@
             </div>
             <div class="symptoms" id="irradiations66">
                 <button type="button" id="irradiations5-0" onclick="selectirradiations(this)"
-                    data-price="15000">とりあえず予約:フェイシャルメニュー</button>
+                    data-price="15000">とりあえず予約フェイシャルメニュー</button>
                 <button type="button" id="irradiations5-1" onclick="selectirradiations(this)"
                     data-price="15000">Y字・円盤ブロープ×ハンドECS</button>
                 <button type="button" id="irradiations5-2" onclick="selectirradiations(this)"
@@ -531,7 +531,7 @@
             <label
                 style="color: red; font-weight: bold; background-color: #f0f0f0; width: 100%; display: block; padding: 40px; padding-left: 5px; box-sizing: border-box; margin-bottom: 20px;">◆ボディーメニュー◆<br>コースをお選びください</label>
             <div class="symptoms">
-                <button type="button" id="1-0firstirradiations" onclick="selectBodyMenu(this)" data-price="15000">とりあえず予約:ボディーメニュー</button>
+                <button type="button" id="1-0firstirradiations" onclick="selectBodyMenu(this)" data-price="15000">とりあえず予約ボディーメニュー</button>
                 <button type="button" id="1-1firstirradiations" onclick="selectBodyMenu(this)" data-price="15000">美脚痩身
                     下半身コース</button>
                 <button type="button" id="1-2irradiations" onclick="selectBodyMenu(this)"
@@ -564,7 +564,7 @@
                 style="color: red; font-weight: bold; background-color: #f0f0f0; width: 100%; display: block; padding: 40px; padding-left: 5px; box-sizing: border-box; margin-bottom: 20px;">◆バストアップメニュー◆<br>コースをお選びください</label>
             <div class="symptoms">
                 <button type="button" id="2-0irradiations" onclick="selectBodyMenu(this)"
-                    data-price="15000">とりあえず予約:バストアップメニュー</button>
+                    data-price="15000">とりあえず予約バストアップメニュー</button>
                 <button type="button" id="2-1irradiations" onclick="selectBodyMenu(this)"
                     data-price="15000">育乳痩せ型コース</button>
                 <button type="button" id="2-2irradiations" onclick="selectBodyMenu(this)"
@@ -597,7 +597,7 @@
             </div>
             <div class="symptoms" id="irradiations77">
                 <button type="button" id="irradiations6-0" onclick="selectirradiations(this)"
-                    data-price="15000">とりあえず予約:男性：光脱毛</button>
+                    data-price="15000">とりあえず予約男性光脱毛</button>
                 <button type="button" id="irradiations6-1" onclick="selectirradiations(this)"
                     data-price="15000">髭脱毛一式</button>
                 <button type="button" id="irradiations6-2" onclick="selectirradiations(this)"
@@ -625,7 +625,7 @@
             </div>
             <div class="symptoms" id="irradiations88">
                 <button type="button" id="irradiations1-0" onclick="selectirradiations(this)"
-                    data-price="15000">とりあえず予約:女性：光脱毛</button>
+                    data-price="15000">とりあえず予約女性光脱毛</button>
                 <button type="button" id="irradiations1-1" onclick="selectirradiations(this)"
                     data-price="15000">Sパーツ脱毛</button>
                 <button type="button" id="irradiations1-2" onclick="selectirradiations(this)"
@@ -658,7 +658,7 @@
             </div>
             <div class="symptoms" id="irradiations99">
                 <button type="button" id="irradiations1-0" onclick="selectirradiations(this)"
-                    data-price="15000">とりあえず予約:WAX脱毛</button>
+                    data-price="15000">とりあえず予約WAX脱毛</button>
                 <button type="button" id="irradiations1-1" onclick="selectirradiations(this)"
                     data-price="15000">おでこ</button>
                 <button type="button" id="irradiations1-2" onclick="selectirradiations(this)"
@@ -730,7 +730,7 @@
                 style="color: red; font-weight: bold; background-color: #f0f0f0; width: 100%; display: block; padding: 40px; padding-left: 5px; box-sizing: border-box; margin-bottom: 20px;">◆眉毛メニュー◆<br>コースをお選びください</label>
             <div class="symptoms">
                 <button type="button" id="firstirradiations" onclick="selectBodyMenu(this)"
-                    data-price="15000">とりあえず予約:眉毛メニュー</button>
+                    data-price="15000">とりあえず予約眉毛メニュー</button>
                 <button type="button" id="secondirradiations" onclick="selectBodyMenu(this)"
                     data-price="15000">眉毛スタイリング</button>
                 <button type="button" id="repeatirradiations" onclick="selectBodyMenu(this)"
@@ -753,7 +753,7 @@
             <label
                 style="color: red; font-weight: bold; background-color: #f0f0f0; width: 100%; display: block; padding: 40px; padding-left: 5px; box-sizing: border-box; margin-bottom: 20px;">◆よもぎ蒸し・オイルリンパ◆<br>コースをお選びください</label>
             <div class="symptoms">
-                <button type="button" id="firstirradiations" onclick="selectBodyMenu(this)" data-price="15000">とりあえず予約:<br>よもぎ蒸し・オイルリンパ</button>
+                <button type="button" id="firstirradiations" onclick="selectBodyMenu(this)" data-price="15000">とりあえず予約<br>よもぎ蒸し・オイルリンパ</button>
                 <button type="button" id="firstirradiations" onclick="selectBodyMenu(this)" data-price="15000">発汗 ダイエット
                     むくみ改善</button>
                 <button type="button" id="repeatirradiations" onclick="selectBodyMenu(this)" data-price="15000">美肌効果
