--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
 <body>
     <div class="container">
-        <h1>テンプレートフォームA_カレンダー改造型<br>予約フォーム</h1>
+        <h1>骨セレブ<br>予約フォーム</h1>
         <div class="label">お客様名※必須</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
@@ -741,7 +741,7 @@
                 return;
             }
 
-            const url = 'https://script.google.com/macros/s/AKfycbwCxnJaxGZ46c3TnnesuZcD_zuxuVoSHoDHo5MxkRzChcK5vZDwBs4HstzkXO-KLyuDYA/exec' +
+            const url = 'https://script.google.com/macros/s/AKfycbycbEq0AQZfqgR5pZ1MAwMB037wayNSft1l01-U-kfuFH2ctZu9aVwo4ayb6zwywoc0IA/exec' +
                 `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
 
             try {
