--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,8 +14,10 @@
             align-items: flex-start;
             height: 100vh;
             margin: 0;
-            padding-top: 20px; /* ページのトップに空白を作る */
+            padding-top: 20px;
+            /* ページのトップに空白を作る */
         }
+
         .container {
             background-color: #fff;
             border-radius: 8px;
@@ -24,15 +27,18 @@
             padding: 20px;
             box-sizing: border-box;
         }
+
         h1 {
             text-align: center;
             margin-bottom: 10px;
             font-size: 24px;
         }
+
         .center-text {
             text-align: center;
             font-size: 16px;
         }
+
         .label {
             display: block;
             margin-bottom: 10px;
@@ -43,7 +49,10 @@
             border-radius: 4px;
             text-align: center;
         }
-        input[type="text"], input[type="date"], textarea {
+
+        input[type="text"],
+        input[type="date"],
+        textarea {
             width: 100%;
             padding: 10px;
             margin-bottom: 20px;
@@ -51,13 +60,17 @@
             border-radius: 4px;
             box-sizing: border-box;
         }
-        .visit-buttons, .symptoms {
+
+        .visit-buttons,
+        .symptoms {
             display: flex;
             flex-wrap: wrap;
             gap: 10px;
             margin-bottom: 20px;
         }
-        .visit-buttons button, .symptoms button {
+
+        .visit-buttons button,
+        .symptoms button {
             flex: 1;
             padding: 10px;
             border: 1px solid #ccc;
@@ -68,20 +81,24 @@
             text-align: center;
             white-space: nowrap;
         }
-        .visit-buttons button.active, .symptoms button.active {
+
+        .visit-buttons button.active,
+        .symptoms button.active {
             background-color: #444;
             color: #fff;
         }
+
         .submit-button {
             width: 100%;
             padding: 15px;
             border: none;
             border-radius: 4px;
-            background-color: #ff4c4c;
+            background-color: #e85bbb;
             color: #fff;
             font-size: 18px;
             cursor: pointer;
         }
+
         .loading-spinner {
             position: absolute;
             top: 50%;
@@ -125,6 +142,7 @@
         #repairButtons {
             display: none;
         }
+
         #treatment-text {
             background-color: #eef9f5;
             padding: 10px;
@@ -159,8 +177,21 @@
             font-weight: bold;
             /* 太文字に設定 */
         }
+
+        input[type="date"] {
+            width: 100%;
+            padding: 15px;
+            /* パディングを広げる */
+            font-size: 16px;
+            /* フォントサイズを大きくする */
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>アルター【占い】<br>占いフォーム</h1>
@@ -200,7 +231,7 @@
         let selectedSymptom = '';
 
         // LIFF初期化
-        document.addEventListener('DOMContentLoaded', function() {
+        document.addEventListener('DOMContentLoaded', function () {
             liff.init({
                 liffId: '2005254357-zKma9BZk' // ここにあなたのLIFF IDを入力
             }).then(() => {
@@ -242,7 +273,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【占いフォーム】\n希望占い：${formData.visitCount}\n何を占いたいですか？：${formData.selectedSymptom}\n生年月日：${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【占いフォーム】\n【希望占い】<br>・${formData.visitCount}\n【何を占いたいですか？】<br>・${formData.selectedSymptom}\n【生年月日】<br>・${formData.dates[0]}\n【メッセージ】<br>・${formData.message}`
             }]).then(() => {
                 alert('ご記入いただいた誕生日から占い結果をお伝えしますのでしばらくお待ちください...');
                 // LIFFウィンドウを閉じる
@@ -265,4 +296,5 @@
         }
     </script>
 </body>
+
 </html>
