--- a/index.html
+++ b/index.html
@@ -178,17 +178,16 @@
             /* 太文字に設定 */
         }
 
-        input[type="date"] {
-            width: 100%;
-            padding: 15px;
-            /* パディングを広げる */
-            font-size: 16px;
-            /* フォントサイズを大きくする */
-            margin-bottom: 20px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
+input[type="date"] {
+    width: 100%; /* 横幅をページ全体に合わせる */
+    padding: 15px; /* タップしやすいようにパディングを広げる */
+    font-size: 18px; /* フォントサイズを大きくして入力しやすくする */
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
     </style>
 </head>
 
