--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
 input[type="date"] {
     width: 100%; /* 横幅をページ全体に合わせる */
-    padding: 15px; /* タップしやすいようにパディングを広げる */
+    padding: 45px; /* タップしやすいようにさらにパディングを広げる */
     font-size: 18px; /* フォントサイズを大きくして入力しやすくする */
     margin-bottom: 20px;
     border: 1px solid #ccc;
