--- a/index.html
+++ b/index.html
@@ -178,16 +178,17 @@
             /* 太文字に設定 */
         }
 
-input[type="date"] {
-    width: 100%; /* 横幅をページ全体に合わせる */
-    padding: 45px; /* タップしやすいようにさらにパディングを広げる */
-    font-size: 18px; /* フォントサイズを大きくして入力しやすくする */
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-
+        input[type="date"] {
+            width: 100%;
+            padding: 15px;
+            /* パディングを広げる */
+            font-size: 16px;
+            /* フォントサイズを大きくする */
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
     </style>
 </head>
 
@@ -216,6 +217,7 @@ input[type="date"] {
             <button type="button" onclick="selectSymptom(this)">天命</button>
         </div>
         <div class="label">生年月日<br>("2024年"をタップすれば楽に年を選べます)</div>
+        <label>↓こちらをタップしてください。</label>
         <input type="date" id="date1" placeholder="タップして日時を入力">
 
         <div class="label">メッセージ<br>（お悩みなどあればご記入ください）</div>
