--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2005254357-zKma9BZk'
+                liffId: ''
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
@@ -482,7 +482,9 @@
             'Sパーツ': 30,
             'Mパーツ': 60,
             'Lパーツ': 60,
-            'Dパーツ': 30
+            'Dパーツ': 30,
+            '【期間限定モニター募集】まつ毛パーマ': 60,
+            '【期間限定モニター募集】オイルリンパマッサージ': 30
         };
 
 
