--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
         <strong>【脱毛】全顔</strong>
     </div>
     <div style="text-align: center; margin-top: 10px;">
-        <img src="https://www.dropbox.com/scl/fi/6mgtsp9z3tycbu8vpst86/.png?rlkey=xc3sas3h59ue81pyxxq4jvule&st=0r1rk8c0&dl=1" alt="全顔脱毛" style="width: 100%; max-width: 300px; height: auto; border-radius: 8px;">
+        <img src="https://www.dropbox.com/scl/fi/0ac5y5ij89rvm5xyh0zbq/.jpg?rlkey=vlrclw5taqx2t9fvlb9l35kug&st=40dk5esq&dl=1" alt="全顔脱毛" style="width: 100%; max-width: 300px; height: auto; border-radius: 8px;">
     </div>
     <div style="text-align: left; margin-top: 10px;">
         顔全体綺麗にしたいんだよね！って方！！！<br>(両頬、もみあげ、鼻下、口下、顎、顎下)<br>部分的に残すことも可能です☆
