--- a/index.html
+++ b/index.html
@@ -475,8 +475,8 @@
             };
 
             // フォームデータのチェック
-            if (!formData.name || !formData.phone || !formData.selectedSymptom) {
-                alert('お名前・電話番号・メニューすべてご記入ください。');
+            if (!formData.name || !formData.phone || !formData.message2 || !formData.message3) {
+                alert('お名前・電話番号・お迎え先・お帰り先すべてご記入ください。');
                 return;
             }
 
